@@ -1,3 +1,10 @@
+2002-05-21  James Tanis  <jtt@saint.sysdetect.com>
+
+	* lib/b_ioh.c (bk_ioh_stdwrfun): Untested support for compression
+	on write.
+	(bk_ioh_stdio_init): Ioctl like function to set up stdio "extras"
+	like compression, authentication, encryption.
+
 2002-05-16  Seth Robertson  <seth@startide.sysdetect.com>
 
 	* lib/b_addrgroup.c (do_net_init_af_inet_udp_listen): Enable
